--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,6 +28,11 @@ archives:
     format_overrides:
     - goos: windows
       format: zip
+    files:
+      - LICENSE
+      - README.md
+      - examples/*
+    rlcp: true
 checksum:
   name_template: 'checksums.txt'
 snapshot:
